
    o new functions `seqFilterPush()` and `seqFilterPop()`

    o new functions `seqGet2bGeno()` and `seqGetAF_AC_Missing()`

    o new function `seqGetData(, "$dosage_sp")` for a sparse matrix of dosages

    o the first argument 'gdsfile' can be a file name in `seqAlleleFreq()`,
      `seqAlleleCount()`, `seqMissing()`

UTILITIES

    o allow opening a duplicated GDS file ('allow.duplicate=TRUE') when the
      input is a file name instead of a GDS object in `seqGDS2VCF()`,
      `seqGDS2SNP()`, `seqGDS2BED()`, `seqVCF2GDS()`, `seqSummary()`,
      `seqCheck()` and `seqMerge()`

    o remove the deprecated '.progress' in `seqMissing()`, `seqAlleleCount()`
      and `seqAlleleFreq()`

    o add `summary.SeqUnitListClass()`

BUG FIXES

    o `seqUnitApply()` works correctly with selected samples if 'parallel' is
      a non-fork cluster

    o `seqVCF2GDS()` and `seqVCF_Header()` work correctly if the VCF header has
       white space

    o `seqGDS2BED()` with selected samples for sex and phenotype information

    o buf fix in `seqGDS2VCF()` if there is no integer genotype


CHANGES IN VERSION 1.32.0
-------------------------

NEW FEATURES

    o new option 'ret.idx' in `seqSetFilter()` for unsorted sample and variant
      indices

    o new option 'ret.idx' in `seqSetFilterAnnotID()` for unsorted variant
      index

    o rewrite the function `seqSetFilterPos()`: new options 'ref' and 'alt',
      'multi.pos=TRUE' by default

    o new option 'packed.idx' in `seqAddValue()` for packing an indexing
      variable

    o new option 'warn' in `seqSetFilter()` to enable or disable the warning

    o new functions `seqNewVarData()` and `seqListVarData()` for
      variable-length data

UTILITIES

    o allow no variant in `seqApply()` and `seqBlockApply()`

    o the list object returned from `seqGetData()` always have names if there
      are more than one input variable names

BUG FIXES

    o `seqGDS2VCF()` should output "." instead of NA in the FILTER column
